# firewall-dotnet

./: .editorconfig  .gitignore  Aikido.Zen.sln  Cake.targets  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md  before.Aikido.Zen.sln.targets  benchmark.js  build.cake  build.ps1  build.sh  dotnet-tools.json  nuget.config  pack-dotnetcore.ps1  pack-dotnetframework.ps1  pack.ps1  summary_no_zen.json
.circleci/: config.yml  generate-packages-checksum.sh
.github/: CONTRIBUTING.md  DEBUGGING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Dockerfile.qa  Dockerfile.qa.dotnet-framework  NuGet.Config  NuGet.Config.dotnet-framework  benchmark.yml  codex-windows-imds-probe.yml  dockur-smoke-test.yml  e2e-tests.yml  qa-tests.yml  release.yml  unit-test.yml
Aikido.Zen.Benchmarks/: AgentContextBenchmarks.cs  Aikido.Zen.Benchmarks.csproj  BenchmarkPatcher.DotNetCore.cs  BenchmarkPatcher.DotNetFramework.cs  BlockListBenchmarks.cs  BlocklistBenchmarks.cs  HttpHelperBenchmarks.cs  HttpHelperLargeFileBenchmarks.cs  LRUCacheBenchmarks.cs  PatchBenchmarks.cs  Program.cs  RateLimitingHelperBenchmarks.cs  SQLInjectionDetectionBenchmarks.cs  ShellInjectionDetectionBenchmarks.cs  results.md
Aikido.Zen.Core/: Agent.cs  AgentStatus.cs  Aikido.Zen.Core.csproj  AikidoOptions.cs  AikidoZenConfig.cs  Bridge.cs  Context.cs  DefaultLogger.cs  IAgent.cs  ReportingStatus.cs
Aikido.Zen.Core/Api/: AgentHttpRequestScope.cs  Api.cs  ApiClientHttpClientFactory.cs  IReporting.cs  IRuntime.cs  IZenApi.cs  Reporting.cs  Runtime.cs
Aikido.Zen.Core/EventHandling/: IAppEvent.cs  InboundRequestEvent.cs  Mediator.cs
Aikido.Zen.Core/Exceptions/: AikidoException.cs
Aikido.Zen.Core/Helpers/: APIHelper.cs  AgentInfoHelper.cs  ArgumentHelper.cs  AssemblyHelper.cs  ContextHelper.cs  DateTimeHelper.cs  EnvironmentHelper.cs  HttpHelper.cs  IPHeaderHelper.cs  IPHelper.cs  JsonHelper.cs  JwtHelper.cs  LLMResultHelper.cs  LogHelper.cs  LoggerConfigurator.cs  OutboundRequestHelper.cs  PathTraversalHelper.cs  RateLimitingHelper.cs  ReflectionHelper.cs  RouteHelper.cs  RouteParameterHelper.cs  SSRFHelper.cs  SqlCommandHelper.cs  SsrfHelper.cs  StackTraceHelper.cs  StatHelper.cs  StringHelper.cs  TypeReflectionHelper.cs  (+4 more)
Aikido.Zen.DotNetCore/: Aikido.Zen.DotNetCore.csproj  Aikido.Zen.DotNetCore.nuspec  Aikido.Zen.DotNetCore.targets  ContextAccessor.cs  DependencyInjection.cs  FodyWeavers.xml  Zen.cs
Aikido.Zen.DotNetFramework/: Aikido.Zen.DotNetFramework.csproj  Aikido.Zen.DotNetFramework.nuspec  Aikido.Zen.DotNetFramework.targets  Firewall.cs  FodyWeavers.xml  ModuleRegistry.cs  README.md  Zen.cs  app.config  packages.config
Aikido.Zen.Profiler/: .editorconfig  CMakeLists.txt  aikido_profiler.h  build_all.cmake  build_all.ps1  build_all.sh  il_codes.h  il_instructions.cpp  il_rewriter.h  instrumentation_filter.h  metadata_helper.h  method_info.h  platform_intrinsics.h  platform_ops.h  profiler_exports.cpp  profiler_exports.h
Aikido.Zen.Profiler/cmake/: FindDotNet.cmake
Aikido.Zen.Profiler/cmake/toolchains/: toolchain_linux_x64.cmake  toolchain_linux_x86.cmake  toolchain_osx_arm64.cmake  toolchain_osx_x64.cmake  toolchain_windows_arm64.cmake
Aikido.Zen.Server.Mock/: Dockerfile  test.http
Aikido.Zen.Test/: APIHelperTests.cs  AgentConfigurationTests.cs  AgentContextTests.cs  AgentInfoHelperTests.cs  AgentTests.cs  Aikido.Zen.Tests.csproj  AikidoExceptionTests.cs  AikidoOptionsTests.cs  ApiAuthTypeHelperTests.cs  ApiClientHttpClientFactoryTests.cs  ApiDataTypeHelperTests.cs  ApiInfoHelperTests.cs  ArgumentHelperTests.cs  AttackKindTests.cs  AttackWaveDetectorTests.cs  BlockListTests.cs  BlockedIpsAPIResponseTests.cs  BlocklistTests.cs  Concurrency.AgentContextTests.cs  ConcurrentLFUDictionaryTests.cs  ContextHelperTests.cs  ContextTests.cs  DataSchemaHelperTests.cs  DetectedAttackTests.cs  DetectedAttackWaveTests.cs  EnvironmentHelperTests.cs  FirewallListsAPIResponseTests.cs  HeartBeatTests.cs  HttpClientPatchTests.cs  HttpHelperTests.cs  HttpWebRequestPatchTests.cs  IOPatcherTests.cs  IOPatchesTests.cs  IOSinkTests.cs  IPHeaderHelperTests.cs  IPHelperTests.cs  IPRangeTests.cs  ImdsHelperTests.cs  InspectorTests.cs  JwtHelperTests.cs  (+47 more)
Aikido.Zen.Test.End2End/: Aikido.Zen.Test.End2End.csproj  AikidoAgentBehaviorTests.cs  AikidoBlockingTests.cs  AikidoBypassTests.cs  AikidoMonitoringTests.cs  BaseAppTests.cs  BlockingTests.cs  EFCoreSqliteSampleAppTests.cs  MongoDbSampleAppTests.cs  MySqlSampleAppTests.cs  OutboundRequestSsrfTests.cs  PostgresSampleAppTests.cs  SqlServerSampleAppTests.cs  SqliteSampleAppTests.cs  UmbracoSampleAppTests.cs  WebApplicationTestBase.cs
Aikido.Zen.Tests.DotNetCore/: Aikido.Zen.Tests.DotNetCore.csproj  BlazorDependencyInjectionTests.cs  BlockingMiddlewareTests.cs  ContextMiddlewareTests.cs  DependencyInjectionTests.cs  RuntimeAssemblyTrackerTests.cs  ZenTests.cs
Aikido.Zen.Tests.DotNetFramework/: Aikido.Zen.Tests.DotNetFramework.csproj  BlockingModuleTests.cs  ContextModuleTests.cs  app.config  packages.config
Aikido.Zen.Tests.Mocks/: Aikido.Zen.Tests.Mocks.csproj  ContextMock.cs  HttpClientMock.cs  ZenApiMock.cs
SampleApp.Common/: BaseStartup.cs  SampleApp.Common.csproj
Webforms.Sample.App/: About.aspx  About.aspx.cs  About.aspx.designer.cs  Contact.aspx  Contact.aspx.cs  Contact.aspx.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Global.asax  Global.asax.cs  Site.Master  Site.Master.cs  Site.Master.designer.cs  Site.Mobile.Master  Site.Mobile.Master.cs  Site.Mobile.Master.designer.cs  ViewSwitcher.ascx  ViewSwitcher.ascx.cs  ViewSwitcher.ascx.designer.cs  Web.config  Webforms.Sample.App.csproj  packages.config
coverage/: test-results-Aikido.Zen.Tests.trx
docs/: aws-secrets-manager.md  azure-key-vault.md  debugging.md  invalid-sql-queries.md  troubleshooting-net-framework.md  troubleshooting.md  user.md
local-packages/: README.md  readme.md
sample-apps/: docker-compose.yaml  sample-apps.sln
scripts/: benchmark.js  create_sample_app.sh  k6.sh  run_benchmarks.sh  run_sample_app.sh  wrk.sh
(+473 files in other folders)
